# faunadb_base_exception

./: .gitignore  pyproject.toml
app/: app.py  settings.py
