[tool.poetry]
name = "faunadb_base_exception"
version = "0.1.0"
description = ""
authors = ["Abbas <abbazs@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
typer = "^0.4.0"
faunadb = "^4.1.1"
pydantic = {extras = ["email", "dotenv"], version = "^1.8.2"}

[tool.poetry.dev-dependencies]
black = "^21.11b1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
